Handle unsatisfiable conjunctions at Reasoner execution