@@ -21,6 +21,7 @@ package grakn.core.reasoner;
 import grakn.core.common.concurrent.ExecutorService;
 import grakn.core.common.concurrent.actor.Actor;
 import grakn.core.common.exception.GraknException;
+import grakn.core.common.iterator.BaseIterator;
 import grakn.core.common.iterator.Iterators;
 import grakn.core.common.iterator.ResourceIterator;
 import grakn.core.common.parameters.Context;
@@ -32,26 +33,25 @@ import grakn.core.concept.answer.ConceptMap;
 import grakn.core.logic.LogicManager;
 import grakn.core.pattern.Conjunction;
 import grakn.core.pattern.Disjunction;
-import grakn.core.pattern.Negation;
+import grakn.core.pattern.variable.Variable;
 import grakn.core.reasoner.resolution.ResolutionRecorder;
 import grakn.core.reasoner.resolution.ResolverRegistry;
 import grakn.core.traversal.TraversalEngine;
+import grakn.core.traversal.common.Identifier;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
+import java.util.ArrayList;
 import java.util.List;
-import java.util.Set;
-import java.util.function.Predicate;
-import java.util.stream.Collectors;
 
 import static grakn.common.collection.Collections.list;
 import static grakn.core.common.concurrent.ExecutorService.PARALLELISATION_FACTOR;
 import static grakn.core.common.exception.ErrorMessage.Internal.ILLEGAL_STATE;
+import static grakn.core.common.exception.ErrorMessage.Pattern.UNSATISFIABLE_CONJUNCTION;
 import static grakn.core.common.exception.ErrorMessage.ThingRead.CONTRADICTORY_BOUND_VARIABLE;
 import static grakn.core.common.iterator.Iterators.iterate;
 import static grakn.core.common.iterator.Iterators.link;
 import static grakn.core.common.producer.Producers.iterable;
-import static java.util.stream.Collectors.toList;
 
 public class Reasoner {
     private static final Logger LOG = LoggerFactory.getLogger(Reasoner.class);
@@ -59,7 +59,7 @@ public class Reasoner {
     private final TraversalEngine traversalEng;
     private final ConceptManager conceptMgr;
     private final LogicManager logicMgr;
-    private Context.Transaction context;
+    private final Context.Transaction context;
     private final ResolverRegistry resolverRegistry;
     private final Actor<ResolutionRecorder> resolutionRecorder; // for explanations
 
@@ -69,68 +69,73 @@ public class Reasoner {
         this.logicMgr = logicMgr;
         this.context = context;
         this.resolutionRecorder = Actor.create(ExecutorService.eventLoopGroup(), ResolutionRecorder::new);
-        this.resolverRegistry = new ResolverRegistry(ExecutorService.eventLoopGroup(), resolutionRecorder, traversalEng, conceptMgr, logicMgr);
+        this.resolverRegistry = new ResolverRegistry(
+                ExecutorService.eventLoopGroup(), resolutionRecorder, traversalEng, conceptMgr, logicMgr
+        );
     }
 
-    public ResourceIterator<ConceptMap> execute(Disjunction disjunction, boolean isParallel) {
-        Set<Conjunction> conjunctions = disjunction.conjunctions().stream()
-                .map(conjunction -> logicMgr.typeResolver().resolve(conjunction))
-                .collect(Collectors.toSet());
-        if (!isParallel) return iterate(conjunctions).flatMap(this::iterator);
-        else return iterable(conjunctions.stream()
-                                     .flatMap(conjunction -> producers(conjunction).stream())
-                                     .collect(toList())).iterator();
+    public ResourceIterator<ConceptMap> execute(Disjunction disjunction, List<Identifier.Variable.Name> filter,
+                                                boolean isParallel) {
+        BaseIterator<Conjunction> conjunctions = iterate(disjunction.conjunctions());
+        if (!isParallel) return conjunctions.flatMap(conj -> iterator(conj, filter));
+        else return iterable(conjunctions.flatMap(conj -> producers(conj, filter)).toList()).iterator();
     }
 
-    private List<Producer<ConceptMap>> producers(Conjunction conjunction) {
-        Producer<ConceptMap> answers = traversalEng
-                .producer(conjunction.traversal(), PARALLELISATION_FACTOR)
-                .map(conceptMgr::conceptMap);
+    private ResourceIterator<Producer<ConceptMap>> producers(Conjunction conjunction) {
+        return producers(conjunction, list());
+    }
 
-        boolean reasonerEnabled = true;
-        if (context.sessionType().isSchema() && context.transactionType().isWrite()) {
-            LOG.warn("Reasoning is disabled in schema write transactions");
-            reasonerEnabled = false;
+    private ResourceIterator<Producer<ConceptMap>> producers(Conjunction conjunction,
+                                                             List<Identifier.Variable.Name> filter) {
+        if (context.isSchemaWrite()) LOG.warn("Reasoning is disabled in schema write transactions");
+
+        List<Producer<ConceptMap>> answerProducers = new ArrayList<>();
+        final Conjunction conj = logicMgr.typeResolver().resolve(conjunction);
+        if (conj.isSatisfiable()) {
+            answerProducers.add(traversalEng.producer(conj.traversal(filter), PARALLELISATION_FACTOR).map(conceptMgr::conceptMap));
+            if (!context.isSchemaWrite()) answerProducers.add(this.resolve(conj));
+        } else if (!filter.isEmpty() && iterate(filter).anyMatch(id -> conj.variable(id).isThing()) ||
+                iterate(conjunction.variables()).anyMatch(Variable::isThing)) {
+            throw GraknException.of(UNSATISFIABLE_CONJUNCTION, conjunction);
+        } else {
+            return iterate(list(Producers.empty()));
         }
-        // TODO check query options if reasoner is disabled
 
-        Set<Negation> negations = conjunction.negations();
-        if (negations.isEmpty()) {
-            return reasonerEnabled ? list(answers, resolve(conjunction)) : list(answers);
-        }
-        else {
-            Predicate<ConceptMap> predicate = answer -> !iterable(iterate(negations).flatMap(
-                    n -> iterate(producers(n.disjunction(), answer))).toList()
-            ).iterator().hasNext();
-            return reasonerEnabled ?
-                    list(answers.filter(predicate), resolve(conjunction).filter(predicate)) : // TODO remove filter after negation implemented in reasoner
-                    list(answers.filter(predicate));
-        }
+        if (conjunction.negations().isEmpty()) return iterate(answerProducers);
+        else return iterate(answerProducers).map(p -> p.filter(answer -> !iterable(
+                iterate(conjunction.negations()).flatMap(n -> iterate(producers(n.disjunction(), answer))).toList()
+        ).iterator().hasNext()));
     }
 
-    private List<Producer<ConceptMap>> producers(Disjunction disjunction, ConceptMap bounds) {
-        return iterate(disjunction.conjunctions()).flatMap(conj -> iterate(producers(conj, bounds))).toList();
+    private ResourceIterator<Producer<ConceptMap>> producers(Disjunction disjunction, ConceptMap bounds) {
+        return iterate(disjunction.conjunctions()).flatMap(conj -> iterate(producers(conj, bounds)));
     }
 
-    public List<Producer<ConceptMap>> producers(Conjunction conjunction, ConceptMap bounds) {
+    public ResourceIterator<Producer<ConceptMap>> producers(Conjunction conjunction, ConceptMap bounds) {
         return producers(bound(conjunction, bounds));
     }
 
     private ResourceIterator<ConceptMap> iterator(Conjunction conjunction) {
-        ResourceIterator<ConceptMap> answers = traversalEng.iterator(conjunction.traversal()).map(conceptMgr::conceptMap);
+        return iterator(conjunction, list());
+    }
 
-        boolean reasonerEnabled = true;
-        if (context.sessionType().isSchema() && context.transactionType().isWrite()) {
-            LOG.warn("Reasoning is disabled in schema write transactions");
-            reasonerEnabled = false;
+    private ResourceIterator<ConceptMap> iterator(Conjunction conjunction, List<Identifier.Variable.Name> filter) {
+        if (context.isSchemaWrite()) LOG.warn("Reasoning is disabled in schema write transactions");
+
+        ResourceIterator<ConceptMap> answers;
+        final Conjunction conj = logicMgr.typeResolver().resolve(conjunction);
+        if (conj.isSatisfiable()) {
+            answers = traversalEng.iterator(conjunction.traversal(filter)).map(conceptMgr::conceptMap);
+            if (!context.isSchemaWrite()) answers = link(answers, iterable(resolve(conj)).iterator());
+        } else if (!filter.isEmpty() && iterate(filter).anyMatch(id -> conj.variable(id).isThing()) ||
+                iterate(conjunction.variables()).anyMatch(Variable::isThing)) {
+            throw GraknException.of(UNSATISFIABLE_CONJUNCTION, conjunction);
+        } else {
+            return Iterators.empty();
         }
-        // TODO check query options if reasoner is disabled
-        ResourceIterator<ConceptMap> reasonerAnswers = reasonerEnabled ? iterable(resolve(conjunction)).iterator() : Iterators.empty();
 
-        // TODO remove reasoner answers negation filter after negation implemented in reasoner
-        Set<Negation> negations = conjunction.negations();
-        if (negations.isEmpty()) return link(answers, reasonerAnswers);
-        else return link(answers, reasonerAnswers).filter(answer -> !iterate(negations).flatMap(
+        if (conjunction.negations().isEmpty()) return answers;
+        else return answers.filter(answer -> !iterate(conjunction.negations()).flatMap(
                 negation -> iterator(negation.disjunction(), answer)
         ).hasNext());
     }
